# NetDisk

./: .gitignore  README.md
TcpClient/: CMakeLists.txt  book.cpp  book.h  friend.cpp  friend.h  main.cpp  online.cpp  online.h  online.ui  opewidget.cpp  opewidget.h  privatechat.cpp  privatechat.h  privatechat.ui  protocol.cpp  protocol.h  sharefile.cpp  sharefile.h  tcpclient.cpp  tcpclient.h  tcpclient.ui
TcpServer/: .gitignore  CMakeLists.txt  README.md  cloud.db  main.cpp  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  opedb.cpp  opedb.h  protocol.cpp  protocol.h  tcpserver.cpp  tcpserver.h
